# packages/server/src/gameSources/GameSource.ts
@@ -1,0 +1,3 @@
+export const GAME_SOURCES = ['steam', 'igdb'] as const;
+
+export type GameSource = (typeof GAME_SOURCES)[number];
